<resources>
    <string name="app_name">QC</string>
    <string name="ok">باشه</string>
    <string name="invalid_username_or_password">نام کاربری یا کلمه عبور اشتباه است!</string>
    <string name="error">خطا</string>
    <string name="add">add</string>
    <string name="other_report">سایر گزارشات فعال</string>
    <string name="report_save">گزارشات ثبت شده</string>
    <string name="Doc">اسناد و مدارک</string>
    <string name="Guide">راهنما</string>
    <string name="Insert_Report">ثبت گزارش</string>
    <string name="Final_Reports">ثبت نهایی گزارشات</string>
    <string name="Product_Tracking_Code">کد ردیابی محصول</string>
    <string name="Name_Operator">نام اپراتور تولید</string>
    <string name="Total_Production">تعداد تولید</string>
    <string name="Shift">شیفت</string>
    <string name="Third">سوم</string>
    <string name="Second">دوم</string>
    <string name="First">اول</string>
    <string name="Entry_Code">کد ردیابی ورودی</string>
    <string name="Non_Code">کد عدم انطباق</string>
    <string name="Confirmation_Info">تایید و ثبت نهایی اطلاعات</string>
    <string name="Final_Report_Title">ثبت نهایی</string>
    <string name="Generated_Report_Information">اطلاعات گزارش ایجاد شده</string>
    <string name="Guide_to_Completing">راهنمای تکمیل گزارش</string>
    <string name="Text_Home_1">هیچ گزارش جدیدی وجود ندارد. شما می توانید با استفاده از آیکن</string>
    <string name="Text_Home_2">گزارش جدید ایجاد کنید. (به فلش نشان داده شده در زیر توجه نمایید.)</string>
    <string name="Total_Reports">تعداد کل گزارشات فعال:</string>
    <string name="The_Title_of_the_Last_Report">آخرین گزارش فعال برای ایستگاه:</string>
    <string name="The_Time">زمان ثبت آخرین گزارش فعال: </string>
    <string name="Btn_Show_Active_Report">مشاهده گزارشات فعال</string>
    <string name="Status_Reports_Active">وضعیت گزارشات فعال</string>
    <string name="Title_Last_Reports">عنوان آخرین گزارش:</string>
    <string name="Show_Reports_Saved">مشاهده گزارشات تکمیل شده</string>
    <string name="Status_Reports_Saved">وضعیت گزارشات ثبت نهایی شده</string>
    <string name="Text_Help_Insert">برای ثبت فرم گزارش ابتدا از قسمت ایستگاه کنترلی گزینه مورد نظر خود را وارد کنید و سپس اگر برای گزینه انتخابی شما برای ایستگاه کنترلی، طرح کیفیت وجود داشته باشد به شما نمایش داده خواهد شد و در انتها بر روی ایجاد فرم گزارش کلیک نمایید.</string>
    <string name="Station">ایستگاه کنترلی</string>
    <string name="Select">انتخاب کنید</string>
    <string name="Quality">طرح کیفیت</string>
    <string name="Btn_Create_Rport">ایجاد فرم گزارش</string>
    <string name="Login">ورود</string>
    <string name="Username">نام کاربری</string>
    <string name="Error_Username">لطفا نام کاربری خود را وارد کنید!</string>
    <string name="Show_Password">مشاهده پسورد</string>
    <string name="Password">رمز عبور</string>
    <string name="Error_Password">لطفا کلمه عبور خود را وارد کنید!</string>
    <string name="Welcome">به نرم افزار کنترل کیفیت خوش آمدید</string>
    <string name="Title">عنوان:</string>
    <string name="Code">کد:</string>
    <string name="Btn_Show">نمایش</string>
    <string name="Tolerance">تلورانس/محدوده مجاز:</string>
    <string name="Sampling_Frequency">تناوب نمونه برداری:</string>
    <string name="Control">ابزار کنترلی</string>
    <string name="Observed_Value">مقدار مشاهده شده</string>
    <string name="Description">توضیحات</string>
    <string name="Status">وضعیت</string>
    <string name="Confirmation">تایید</string>
    <string name="Rejection">رد</string>
    <string name="Btn_Save_info">ثبت اطلاعات</string>
    <string name="Characteristic_Title">عنوان مشخصه:</string>
    <string name="Dgree_Imortant">درجه اهمیت (A)</string>
    <string name="Characteristic_Title_1">عنوان مشخصه:</string>
    <string name="Show_Value">مقدار مشاهده شده پس از اعمال ضریب تصحیح:</string>
    <string name="Status_1">وضعیت:</string>
    <string name="Date_Save">تاریخ ثبت:</string>
    <string name="Time_Save">ساعت ثبت:</string>
    <string name="Recorded_Information">اطلاعات ثبت شده</string>
    <string name="Station_1">ایستگاه کنترلی:</string>
    <string name="Quality_1">طرح کیفیت:</string>
    <string name="Time_Create_Info">زمان ایجاد گزارش:</string>
    <string name="Time_Save_Last_Info">زمان ثبت آخرین تغییرات:</string>
    <string name="Time_Save_Last_Report">زمان ثبت نهایی گزارش:</string>
    <string name="Alert_No_Save_Info">هیچ گزارش فعال ثبت شده نهایی وجود ندارد</string>
    <string name="QC">کنترل کیفیت</string>
    <string name="Home">خانه</string>
    <string name="Exit">خروج</string>
    <string name="more">بیشتر</string>
    <string name="rememberMe">مرا به خاطر بسپار</string>
    <string name="services">سرویس برنامه کنترل کیفیت در حال اجرا است.</string>
    <string name="item_not_found">موردی وجود ندارد</string>
    <string name="success_login">ورود با موفقیت انجام شد</string>
    <string name="alert_exit">برای خروج، کلید بازگشت را مجدداً فشار دهید</string>
</resources>