<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_info">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/vazirmatn_bold"
            android:text="@string/Tolerance"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title_doc_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/vazirmatn_fd_regular"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintRight_toLeftOf="@+id/txt_title_doc"
            app:layout_constraintTop_toTopOf="@+id/txt_title_doc"
            tools:ignore="RtlHardcoded"
            tools:text="ایستگاه کنترلی" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/code_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/vazirmatn_bold"
            android:text="@string/Sampling_Frequency"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintRight_toLeftOf="@+id/txt_title_doc_1"
            app:layout_constraintTop_toTopOf="@+id/txt_title_doc"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/code_doc_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/vazirmatn_regular"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintRight_toLeftOf="@+id/code_doc"
            app:layout_constraintTop_toTopOf="@+id/code_doc"
            tools:ignore="RtlHardcoded"
            tools:text="کد1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/control_tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/vazirmatn_bold"
            android:text="@string/Control"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="@+id/txt_title_doc"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_doc" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/spinnerView_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/spinner_down"
            android:dropDownVerticalOffset="60dp"
            android:fontFamily="@font/vazirmatn_medium"
            android:hint="@string/Select"
            android:paddingLeft="6dp"
            android:paddingTop="6dp"
            android:paddingRight="40dp"
            android:paddingBottom="6dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14.5sp"
            app:layout_constraintBottom_toBottomOf="@+id/control_tools"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/control_tools"
            app:layout_constraintTop_toTopOf="@+id/control_tools"
            app:spinner_arrow_animate="true"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_show="false"
            app:spinner_arrow_tint="@color/yellow"
            app:spinner_divider_color="@color/black"
            app:spinner_divider_show="true"
            app:spinner_divider_size="0.4dp"
            app:spinner_popup_animation="dropdown"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrow_spinner_info"
            android:layout_width="25dp"
            android:layout_height="0dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/arrow_down"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerView_info"
            app:layout_constraintRight_toRightOf="@+id/spinnerView_info"
            app:layout_constraintTop_toTopOf="@+id/spinnerView_info"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/observed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/vazirmatn_bold"
            android:text="@string/Observed_Value"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="@+id/control_tools"
            app:layout_constraintTop_toBottomOf="@+id/control_tools" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_info"
            android:fontFamily="@font/vazirmatn_medium"
            android:layoutDirection="ltr"
            android:maxLength="31"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/crusor_valid"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/observed_value"
            app:layout_constraintLeft_toLeftOf="@+id/spinnerView_info"
            app:layout_constraintRight_toLeftOf="@+id/observed_value"
            app:layout_constraintTop_toTopOf="@+id/observed_value"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_info"
            android:fontFamily="@font/vazirmatn_medium"
            android:layoutDirection="ltr"
            android:maxLength="31"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursordrawablered"
            app:layout_constraintBottom_toBottomOf="@+id/observed_value"
            app:layout_constraintLeft_toLeftOf="@+id/spinnerView_info"
            app:layout_constraintRight_toLeftOf="@+id/observed_value"
            app:layout_constraintTop_toTopOf="@+id/observed_value"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/edit_text_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_info"
            android:fontFamily="@font/vazirmatn_medium"
            android:layoutDirection="ltr"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursordrawablered"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/observed_value"
            app:layout_constraintLeft_toLeftOf="@+id/spinnerView_info"
            app:layout_constraintRight_toLeftOf="@+id/observed_value"
            app:layout_constraintTop_toTopOf="@+id/observed_value"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/observed_value_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/vazirmatn_medium"
            android:text="مقدار مشاهده شده پس از اعمال ضریب تصحیح: "
            android:textColor="@color/black"
            app:layout_constraintRight_toRightOf="@+id/observed_value"
            app:layout_constraintTop_toBottomOf="@+id/observed_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/edit_text_3_observed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazirmatn_medium"
            android:text="-"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="@+id/observed_value_change"
            app:layout_constraintRight_toLeftOf="@+id/observed_value_change"
            app:layout_constraintTop_toTopOf="@+id/observed_value_change" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/vazirmatn_bold"
            android:text="@string/Description"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="@+id/observed_value"
            app:layout_constraintTop_toBottomOf="@+id/observed_value_change" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_info"
            android:fontFamily="@font/vazirmatn_medium"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="6dp"
            android:maxLength="2047"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textColor="@color/black"
            android:textDirection="rtl"
            app:layout_constraintLeft_toLeftOf="@+id/spinnerView_info"
            app:layout_constraintRight_toLeftOf="@+id/description"
            app:layout_constraintTop_toTopOf="@+id/description"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/status_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/vazirmatn_bold"
            android:text="@string/Status"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_2" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/status_info"
            app:layout_constraintRight_toLeftOf="@+id/status_info"
            app:layout_constraintTop_toTopOf="@+id/status_info">

            <RadioButton
                android:id="@+id/radio_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:buttonTint="@color/green"
                android:enabled="true"
                android:fontFamily="@font/vazirmatn_medium"
                android:layoutDirection="ltr"
                android:text="@string/Confirmation"
                android:textColor="@color/green"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/status_info"
                app:layout_constraintRight_toLeftOf="@+id/status_info"
                app:layout_constraintTop_toTopOf="@+id/status_info"
                tools:ignore="RtlHardcoded" />

            <RadioButton
                android:id="@+id/radio_rejection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:buttonTint="@color/red"
                android:enabled="true"
                android:fontFamily="@font/vazirmatn_medium"
                android:layoutDirection="ltr"
                android:text="@string/Rejection"
                android:textColor="@color/red"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/status_info"
                app:layout_constraintRight_toLeftOf="@+id/radio_confirmation"
                app:layout_constraintTop_toTopOf="@+id/status_info"
                tools:ignore="RtlHardcoded" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_info"
            android:fontFamily="@font/vazirmatn_bold"
            android:paddingTop="5dp"
            android:text="@string/Btn_Save_info"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.16"
            app:layout_constraintLeft_toLeftOf="@+id/edit_text_2"
            app:layout_constraintTop_toTopOf="@+id/status_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="185dp"
        android:background="@drawable/background_title_info"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/inner_info"
        app:layout_constraintRight_toRightOf="@+id/inner_info"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="560dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/vazirmatn_bold"
            android:gravity="center"
            android:text="@string/Characteristic_Title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/vazirmatn_bold"
            android:gravity="center"
            android:text="@string/Dgree_Imortant"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
